--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#a5c640</color>
+    <color name="colorPrimaryDark">#89a632</color>
+    <color name="colorAccent">#89a632</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+
+    <color name="gray">#F5F5F5</color>
+    <color name="blue_1">#00B4DB</color>
+    <color name="blue_2">#0083B0</color>
+
+    <color name="green">#4caf50</color>
+    <color name="green_transparent">#4D4caf50</color>
+
+    <color name="red">#f44336</color>
+    <color name="red_transparent">#4Df44336</color>
 </resources>
