--- a/app/src/main/res/layout/activity_main_state_generate.xml
+++ b/app/src/main/res/layout/activity_main_state_generate.xml
@@ -10,6 +10,7 @@
     tools:ignore="Overdraw">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView_banner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/activity_main_state_view_generate"
@@ -20,6 +21,7 @@
 
 
     <View
+        android:id="@+id/view_line1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/_50sdp"
@@ -37,6 +39,7 @@
 
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView_generateCodeIcon"
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
         android:adjustViewBounds="true"
@@ -64,6 +67,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout_generate"
         android:layout_width="0dp"
         android:layout_height="@dimen/_130sdp"
         android:layout_marginStart="30dp"
@@ -134,6 +138,7 @@
 
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageView_checkValidateCodeIcon"
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_25sdp"
         android:adjustViewBounds="true"
@@ -162,6 +167,7 @@
         app:layout_constraintVertical_bias="0.8" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout_validate"
         android:layout_width="0dp"
         android:layout_height="@dimen/_130sdp"
         android:layout_marginStart="30dp"
